fixed spacing to look like final

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,20 @@
-body { 
-  background-image: url("../images/black.jpg"); 
+body {
+  background-image: url("../images/black.jpg");
 }
 
-#page-wrapper { 
+#page-wrapper {
   width: 960px;
   margin: 0 auto;
   box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
   border-radius: 12px 12px 0px 0px; 
 }
-#header { 
+#header {
   position: relative;
   margin-top: 40px;
   border-radius: 12px 12px 0px 0px;
 }
-
-#header h1 { position: absolute;
+#header h1 {
+  position: absolute;
   left: 420px;
   top:5px;
   font-size: 3em;
@@ -22,12 +22,12 @@ body {
   color: #E35335;
 }
 
-#header a#logo1 img { 
+#header a#logo1 img {
   margin-top: 20px;
   margin-left: 20px;
   margin-bottom: 20px;
 }
-#header #toplink { 
+#header #toplink {
   text-decoration: none;
   position: absolute;
   top:-34px;
@@ -39,13 +39,13 @@ body {
 #footer {
   background-color: #777;
   height: 80px;
-  clear: both; 
+  clear: both;
 }
 #content-wrapper {
   background-image: url("../images/repeating.png");
   float: left;
 }
-#main-content { 
+#main-content {
   min-height: 300px;
   width: 715px;
   margin-right: 30px;
@@ -91,7 +91,7 @@ h2 strong {
 #main-nav ul li {
   float: left;
   position: relative;
-  right: 50%;  
+  right: 50%;
 }
 
 #main-nav ul li a {
@@ -103,15 +103,15 @@ h2 strong {
 
 #main-nav ul li a:hover {
   background-color: #ccc;
-  color: #333; 
+  color: #333;
 }
 
-#center { 
+#center {
   width: 960px;
-  text-align: center; 
+  text-align: center;
 }
 
-strong { 
-font-weight: 900;
-font-size: 48px; 
+strong {
+  font-weight: 900;
+  font-size: 48px;
 }
